# haskell-talks-csv-parser

./: cabal.project  cars.csv  cars_bad.csv  csv-parser.cabal  input.csv  persons.csv
app/: Main.hs
src/: Util.hs
src/Model/: Car.hs  Person.hs
src/Parse/: Csv.hs  Oleg.hs  Tanya.hs  Valeri.hs
