cabal-version:      2.4
name:               csv-parser
version:            0.1.0.0
-- synopsis:
-- description:
license:            NONE
author:             Oleg Pascal
maintainer:         61763119+opasql@users.noreply.github.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall
    default-extensions:
      OverloadedStrings

library
    import:           warnings
    exposed-modules:  MyLib
                    , Parse.Csv
                    , Model.Person
                    , Model.Car
                    , Parse.Tanya
                    , Parse.Valeri
                    , Util

    -- other-modules:
    -- other-extensions:
    build-depends:    base
                    , text
                    , attoparsec
    hs-source-dirs:   src
    default-language: Haskell2010

executable csv-parser
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends: base
                  , csv-parser
                  , text
                  , pretty-simple

    hs-source-dirs:   app
    default-language: Haskell2010
